Order List and order item handled

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -59,7 +59,7 @@
                             <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                         </div>
                         <div class="col-xs-12 col-md-6">
-                            <a class="btn btn-success" href="#">Add to cart</a>
+                            <a class="btn btn-success" th:href="@{/add_to_cart/product(cart_item_id=${prod.id})}">Add to cart</a>
                         </div>
                     </div>
                 </div>
