--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -57,7 +57,7 @@
         </form>
 
         <div class="cart">
-            <a href="#">
+            <a href="/cart">
                 <i class="fas fa-shopping-cart"></i>
                 <span th:text="${cartSize}">Number of Items</span>
             </a>
