--- a/src/main/webapp/templates/cart.html
+++ b/src/main/webapp/templates/cart.html
@@ -24,26 +24,45 @@
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
+          integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/cart.css" />
 </head>
 
 <body>
 
-<div class="jumbotron text-center">
-    <h1>Codecool Shop</h1>
-</div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand brand" href="index.html"><h1>Code Cool Shop</h1></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+        </ul>
+        <span class="navbar-text">
+            <a class="cart" href="/cart">
+                <i class="fas fa-shopping-cart"></i>
+                <span id="cart-num" th:text="${cartSize}">Number of Items</span>
+            </a>
+        </span>
+    </div>
+</nav>
 
 <div class="container">
     <div class="well well-sm">
-        <table>
-            <th>
+        <table class="table">
+            <thead class="thead-active">
                 <tr>
-                    <td>Item name</td>
-                    <td>Quantity</td>
-                    <td>Price</td>
+                    <th scope="col">Item name</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Price</th>
                 </tr>
-            </th>
-            <tbody th:each="cartItem,iterStat : ${cartItems}">
+            </thead>
+            <tbody id="cart-list" th:each="cartItem,iterStat : ${cartItems}">
                 <tr>
                     <td th:text="${cartItem.getName()}">Item Name</td>
                     <td th:text="${cartItem.getQuantity()}">Quantity</td>
