--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -79,10 +79,10 @@
     </div>
 
     <div id="products" class="row list-group">
-        <div class="container-fluid">
+        <div class="container-fluid product">
             <div class="item col-xs-4 col-lg-4" th:each="prod,iterStat : ${products}">
                 <div class="thumbnail">
-                    <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" th:attr="src='/static/img/product_' + ${prod.id} + '.jpg'" alt="" />
+                    <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" th:attr="src='/static/img/product_' + ${prod.id} + '.jpg'" alt="" width="150" height="150"/>
                     <div class="caption">
                         <h4 class="group inner list-group-item-heading" th:text="${prod.name}">Product name</h4>
                         <p class="group inner list-group-item-text" th:text="${prod.description}">Product description... </p>
