--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -35,7 +35,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand brand" href="index.html"><h1>Code Cool Shop</h1></a>
+    <a class="navbar-brand brand" href="/"><h1>Code Cool Shop</h1></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -57,6 +57,7 @@
             <div class="col-sm-5 col-xs-5">
                 <form class="form-inline" action="index.html" method="get">
                     <select class="form-control form-control-lg selector" name="dropdown" id="dropdown">
+                        <option value="" selected disabled hidden>Select Category</option>
                         <div th:each="cat,iterStat : ${categories}">
                             <option th:value="${cat.getId()}"><strong th:text="${cat.getName()}">Category Title</strong></option>
                         </div>
@@ -68,6 +69,7 @@
             <div class="col-sm-5 col-xs-5">
                 <form class="form-inline" action="index.html" method="get"  >
                     <select class="form-control form-control-lg selector" name="dropdown2" id="dropdown2">
+                        <option value="" selected disabled hidden>Select Supplier</option>
                         <div th:each="sup,iterStat : ${supplier}">
                             <option th:value="${sup.getId()}"><strong th:text="${sup.getName()}">Supplier Title</strong></option>
                         </div>
