Checkout button in cart page and placeholders in checkout fields

--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -23,61 +23,61 @@
         <div class="container_personal_data">
             <h4>Personal data</h4>
             First name:<br>
-            <input type="text" name="firstname">
+            <input type="text" name="firstname" placeholder="First name">
             <br>
             Last name:<br>
-            <input type="text" name="lastname">
+            <input type="text" name="lastname" placeholder="Last name">
             <br>
             Email:<br>
-            <input type="email" name="email">
+            <input type="email" name="email" placeholder="Email">
             <br>
             Phone number<br>
-            <input type="number" name="phone_number">
+            <input type="number" name="phone_number" placeholder="Phone number">
         </div>
         <br><br>
         <div class="container_billing">
             <h4>Billing Address</h4>
             Name:<br>
-            <input type="text" name="billing_name">
+            <input type="text" name="billing_name" placeholder="Billing name">
             <br>
             Country<br>
-            <input type="text" name="billing_country">
+            <input type="text" name="billing_country" placeholder="Country">
             <br>
             City<br>
-            <input type="text" name="billing_city">
+            <input type="text" name="billing_city" placeholder="City">
             <br>
             Postal code<br>
-            <input type="number" name="billing_postal_code">
+            <input type="number" name="billing_postal_code" placeholder="Postal code">
             <br>
             Street<br>
-            <input type="text" name="billing_street">
+            <input type="text" name="billing_street" placeholder="Street">
             <br>
             House number<br>
-            <input type="text" name="billing_house_ number">
+            <input type="text" name="billing_house_ number" placeholder="House number">
         </div>
         <br><br>
         <div class="container_shipping">
             <h4>Shipping Address</h4>
             Name:<br>
-            <input type="text" name="shipping_name">
+            <input type="text" name="shipping_name" placeholder="Shipping name">
             <br>
             Country<br>
-            <input type="text" name="shipping_country">
+            <input type="text" name="shipping_country" placeholder="Country">
             <br>
             City<br>
-            <input type="text" name="shipping_city">
+            <input type="text" name="shipping_city" placeholder="City">
             <br>
             Postal code<br>
-            <input type="number" name="shipping_postal_code">
+            <input type="number" name="shipping_postal_code" placeholder="Postal code">
             <br>
             Street<br>
-            <input type="text" name="shipping_street">
+            <input type="text" name="shipping_street" placeholder="Street">
             <br>
             House number<br>
-            <input type="text" name="shipping_house_ number">
+            <input type="text" name="shipping_house_ number" placeholder="House number">
         </div>
         <br><br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="btn btn-large btn-success">
         <br><br>
     </form>
 </div>
