--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -32,7 +32,7 @@ div#products.row.list-group {
 }
 
 div.container-fluid {
-    margin: 15px;
+    margin-bottom: 15px;
 }
 
 .item.list-group-item
@@ -128,10 +128,11 @@ div .filter {
     height: 80px;
 }
 
-div .col-sm-5 {
+div.col-sm-5.col-xs-5 {
     display         : flex;
     justify-content : center;
     align-items     : center;
+    margin: 0;
 }
 
 select#dropdown.form-control.form-control-lg.selector{
