--- a/src/main/webapp/static/css/cart.css
+++ b/src/main/webapp/static/css/cart.css
@@ -14,3 +14,9 @@ img.cart-image {
     width: 50px;
     height: 50px;
 }
+
+a.btn.btn-large.btn-success.btn-lg.btn-block {
+    height: 40px;
+    font-size: 18px;
+    text-align: center;
+}
