--- a/src/main/webapp/templates/cart.html
+++ b/src/main/webapp/templates/cart.html
@@ -76,7 +76,7 @@
     <h4 th:text="${totalPrice}">Total Price</h4>
     <br>
     <p>
-        <a href="/checkout" id = "" class="btn btn-large btn-success" style="height:30px;width:200px">Go to the checkout page</a>
+        <a href="/checkout" id = "" class="btn btn-large btn-success btn-lg btn-block">Go to the checkout page</a>
     </p>
     <br>
 </div>
