--- a/src/main/webapp/templates/product/paypal.html
+++ b/src/main/webapp/templates/product/paypal.html
@@ -57,22 +57,22 @@
     <!------ Include the above in your HEAD tag ---------->
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand brand" href="/"><img class="logo" src="/static/img/codecool.png"/></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-            </ul>
-            <span class="navbar-text">
-                <a class="cart" href="/cart">
-                    <i class="fas fa-shopping-cart"></i>
-                    <span id="cart-num" th:text="${cartSize}">Number of Items</span>
-                </a>
-            </span>
-        </div>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand brand" href="/"><img class="logo" src="/static/img/codecool.png"/></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+        </ul>
+        <span class="navbar-text">
+            <a class="cart" href="/cart">
+                <i class="fas fa-shopping-cart"></i>
+                <span id="cart-num" th:text="${cartSize}">Number of Items</span>
+            </a>
+        </span>
+    </div>
+</nav>
 
 
 
@@ -141,7 +141,7 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-5 col-sm-7">
-                                    <button type="submit" class="btn btn-success btn-lg">Pay Now</button>
+                                    <button type="submit" class="btn btn-success btn-lg btn-block">Pay Now</button>
                                 </div>
                             </div>
                         </fieldset>
